--- a/package.json
+++ b/package.json
@@ -26,5 +26,8 @@
   "homepage": "https://github.com/doguinho/tvmaze#readme",
   "devDependencies": {
     "typescript": "^3.4.4"
+  },
+  "dependencies": {
+    "http-server": "^0.11.1"
   }
 }
